@@ -9,7 +9,7 @@
 
 
 
-<p class="todo">@@ Incomplete</p>
+<p class="todo">@@ Incomplete / misnamed?</p>
 <p>ARQ consists of the following parts:</p>
 <ul>
   <li>The SPARQL abstract syntax tree (AST) and the SPARQL parser</li>
